name:               aviation-units
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>, Joshua Morris <ɯoɔ˙lᴉɐɯƃ@llǝʞsɐɥ+sᴉɹɹoɯuɥoɾɐnɥsoɾ>
maintainer:         Tony Morris, Joshua Morris
copyright:          Copyright (c) 2017-2019, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Units of measurements used in aviation.
category:           Aviation
description:        
  <<http://i.imgur.com/EOnccMT.png>>
  .
  Units of measurements used in aviation.

homepage:           https://github.com/data61/aviation-units
bug-reports:        https://github.com/data61/aviation-units/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog
tested-with:        GHC == 8.0.1

source-repository   head
  type:             git
  location:         git@github.com:data61/aviation-units.git

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 4.13
                    , lens >= 4.15 && < 4.18

  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Units
                    Data.Aviation.Units.Centimetres
                    Data.Aviation.Units.ImperialGallons
                    Data.Aviation.Units.Inches
                    Data.Aviation.Units.Kilograms
                    Data.Aviation.Units.Litres
                    Data.Aviation.Units.Pounds
                    Data.Aviation.Units.Thouinches
                    Data.Aviation.Units.USGallons

